# labjack-controller

./: .travis.yml  CONTRIBUTING.md  LICENSE  README.md  demo.py  filename  install-linux.sh  paper.bib  paper.md  requirements.txt  setup.cfg  setup.py  simple-demo.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  question-template.md
demos/: Parallel Backup.ipynb  manual_demo.py  notebook-demo-1-nuance.ipynb  notebook-demo-2-parallel.ipynb  simple-demo.py
docs/: Makefile  conf.py  index.rst  labjackcontroller.rst  modules.rst  overview.rst  requirements.txt
docs/demos/: notebook-demo-2-parallel.ipynb
docs/source/: conf.py  demos.rst  index.rst  installation.rst
docs/source/demos/: notebook-demo-2-parallel.ipynb
installers/: install-linux.sh
labjackcontroller/: lab_unittests.py  labtools.py
labjackcontroller.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
labjacktools/: labtools.py
tests/: labjackcontroller_test.py
